force-app/main/default/objects/AH_UDC_Form__c/AH_UDC_Form__c.object-meta.xml
<CustomObject>
    <description>This object contains details of Forms that are available as Workbook Steps.</description>
    <label>UDC Form</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDC Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>