force-app/main/default/objects/AH_UDC_Form__c/fields/CopyResponseWhenSendingNew__c.field-meta.xml
<CustomField>
    <fullName>CopyResponseWhenSendingNew__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this form has Form Type of &quot;Product&quot; and this field is checked and the user is using &quot;Send Workbook&quot; with the option &quot;Send a new blank Workbook&quot;, the most recent response for this form will be copied.</description>
    <inlineHelpText>If this form has Form Type of &quot;Product&quot; and this field is checked and the user is using &quot;Send Workbook&quot; with the option &quot;Send a new blank Workbook&quot;, the most recent response for this form will be copied.</inlineHelpText>
    <label>Copy Response When Sending New</label>
    <type>Checkbox</type>
</CustomField>