force-app/main/default/objects/AH_UDC_Form__c/fields/CustomUrlId__c.field-meta.xml
<CustomField>
    <fullName>CustomUrlId__c</fullName>
    <description>This is the ID set in Form Assembly on the Publishing - Custom URL setting.  It should be in the format of a 36 character GUID.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is the ID set in Form Assembly on the Publishing - Custom URL setting.  It should be in the format of a 36 character GUID.</inlineHelpText>
    <label>Custom Url Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>