force-app/main/default/objects/AH_UDC_Form__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <description>This is JSON that is used to define the Form and options for it.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is JSON that is used to define the Form and options for it.</inlineHelpText>
    <label>Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>