force-app/main/default/objects/AH_UDC_Form__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field stores the description of the form.

For file upload forms you can use these tags in your description:
{NumberOfFiles} = The total number of files the user is allowed to upload for the step.
{NumberOfFilesAtOnce} = The number of files the user is allowed to upload at one time.
{MaxIndividualFileSizeMB} = The maximum file size that the user is allowed to upload.
{AllowedExtensions} = The list of file extensions that are allowed to be uploaded.
{HeightMinimumPixels} = For images the Minimum Height in Pixels
{HeightMaximumPixels} = For images the Maximum Height in Pixels
{WidthMinimumPixels} = For images the Minimum Width in Pixels
{WidthMaximumPixels} = For images the Maximum Width in Pixels</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the description of the form.

For file upload forms you can use these tags in your description:
{NumberOfFiles}
{NumberOfFilesAtOnce}
{MaxIndividualFileSizeMB}
{AllowedExtensions}
{HeightMinimumPixels}
{HeightMaximumPixels}
{WidthMinimumPixels}
{WidthMaximumPixels}</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>