force-app/main/default/objects/AH_UDC_Form__c/fields/FormAssemblyId__c.field-meta.xml
<CustomField>
    <fullName>FormAssemblyId__c</fullName>
    <description>This is the numeric ID for the form in Form Assembly.
Example URL: https://amadeushospitality.tfaforms.net/4853168
Form Assembly Id would be: 4853168</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is the numeric ID for the form in Form Assembly.
Example URL: https://amadeushospitality.tfaforms.net/4853168
Form Assembly Id would be: 4853168</inlineHelpText>
    <label>Form Assembly Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>