force-app/main/default/objects/AH_UDC_Form__c/fields/FormType__c.field-meta.xml
<CustomField>
    <fullName>FormType__c</fullName>
    <description>Defines the type of field.  If the form has multiple workbooks for more than one product, it is considered a Shared Form.</description>
    <inlineHelpText>Defines the type of field.  If the form has multiple workbooks for more than one product, it is considered a Shared Form.</inlineHelpText>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>