force-app/main/default/objects/AH_UDC_Form__c/fields/HeightMinimumPixels__c.field-meta.xml
<CustomField>
    <fullName>HeightMinimumPixels__c</fullName>
    <description>This field stores the minimum height required (in pixels).</description>
    <inlineHelpText>This field stores the minimum height required (in pixels).</inlineHelpText>
    <label>Height Minimum Pixels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>