force-app/main/default/objects/AH_UDC_Form__c/fields/MaxIndividualFileSizeMB__c.field-meta.xml
<CustomField>
    <fullName>MaxIndividualFileSizeMB__c</fullName>
    <description>This field stores the maximum size of the file in MB.</description>
    <inlineHelpText>This field stores the maximum size of the file in MB.</inlineHelpText>
    <label>Maximum Individual File Size in MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>