force-app/main/default/objects/AH_UDC_Form__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Click this link to preview your form.</description>
    <formula>IF( RecordType.DeveloperName !=&apos;FormAssembly&apos;,&apos;&apos;,
&apos;https://amadeushospitalitysb.tfaforms.net/&apos; +
IF(ISBLANK(CustomUrlId__c), FormAssemblyId__c, &apos;f/&apos; + CustomUrlId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click this link to preview your form.</inlineHelpText>
    <label>Preview Form</label>
    <type>Text</type>
</CustomField>