force-app/main/default/objects/AH_UDC_Form__c/fields/WidthMinimumPixels__c.field-meta.xml
<CustomField>
    <fullName>WidthMinimumPixels__c</fullName>
    <description>This field stores the minimum width required (in pixels).</description>
    <inlineHelpText>This field stores the minimum width required (in pixels).</inlineHelpText>
    <label>Width Minimum Pixels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>