force-app/main/default/objects/AH_UDC_Form__c/recordTypes/AH_UDC_AmadeusFileUpload.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_AmadeusFileUpload</fullName>
    <active>true</active>
    <description>This form is a Amadeus File Upload Form</description>
    <label>Amadeus File Upload</label>
</RecordType>