force-app/main/default/objects/AH_UDC_Form__c/recordTypes/AH_UDC_AmadeusForm.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_AmadeusForm</fullName>
    <active>true</active>
    <description>This form is a Amadeus Custom Form</description>
    <label>Amadeus Form</label>
</RecordType>