force-app/main/default/objects/AH_UDC_Form__c/recordTypes/FormAssembly.recordType-meta.xml
<RecordType>
    <fullName>FormAssembly</fullName>
    <active>true</active>
    <description>This form is a Form Assembly form</description>
    <label>Form Assembly</label>
</RecordType>