force-app/main/default/objects/AH_UDC_Form__c/listViews/AH_UDC_MyForms.listView-meta.xml
<ListView>
    <fullName>AH_UDC_MyForms</fullName>
    <columns>NAME</columns>
    <columns>FormAssemblyId__c</columns>
    <columns>DevelopForm__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Forms</label>
    <language>en_US</language>
</ListView>