force-app/main/default/objects/AH_UDC_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FormType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FormAssemblyId__c</columns>
    <columns>DevelopForm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Form__c.FormAssembly</value>
    </filters>
    <label>All</label>
</ListView>