force-app/main/default/objects/AH_UDC_Form__c/listViews/AmadeusFileUpload.listView-meta.xml
<ListView>
    <fullName>AmadeusFileUpload</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>FormType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FormAssemblyId__c</columns>
    <columns>DevelopForm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Form__c.AH_UDC_AmadeusFileUpload</value>
    </filters>
    <label>Amadeus File Upload</label>
    <language>en_US</language>
</ListView>